--- a/MyApplication/app/src/main/res/layout/activity_main.xml
+++ b/MyApplication/app/src/main/res/layout/activity_main.xml
@@ -12,6 +12,7 @@
     tools:context="com.lz.hellojni.MainActivity">
 
     <TextView
+        android:id="@+id/text_show"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Hello World!" />
